tests/paczka1/small_fuzzy/12889880.err
Error in line 2: YvvdsX9 A240 34,1
Error in line 1: bGiiDioyL S374 60,8
Error in line 3: YvvdsX9 S374 50,4
Error in line 8: YvvdsX9 A240 19,2
